tests/language_tests/pass/0089_return_exits_while_loop_and_function.ee
fn helper() {
    while true {
        return 11;
    }
    print(999);
}

fn main() {
    print(helper());
}
