tests/language_tests/fail/0065_bool_modulo.ee
fn main() {
    print(true % 2);
}
